--- a/templates/index/home.html
+++ b/templates/index/home.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Foundation | Welcome</title>
     <link rel="stylesheet" href="/assets/css/foundation.css" />
+	<!-- This is how you would link your custom stylesheet -->
+	<link rel="stylesheet" href="/assets/css/app.css">
     <script src="/assets/js/vendor/modernizr.js"></script>
   </head>
   <body>
